--- a/philo/libs/libft/Makefile
+++ b/philo/libs/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: safoh <safoh@student.codam.nl>             //   \ \ __| | | \ \/ /    #
 #                                                  (|     | )|_| |_| |>  <     #
 #    Created: 2022/02/09 17:06:29 by safoh        /'\_   _/`\__|\__,_/_/\_\    #
-#    Updated: 2022/07/16 20:43:00 by safoh        \___)=(___/                  #
+#    Updated: 2022/08/24 19:52:02 by safoh        \___)=(___/                  #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ NAME			=libft.a
 
 CC				:=gcc
 RM				:=rm -rf
-CFLAGS			=-Wall -Wextra -Werror$(if $(DEBUG), -g -fsanitize=address)\
+CFLAGS			=-Wall -Wextra -Werror$(if $(DEBUG), -g -fsanitize=thread)\
 				 $(if $(MALLOC), -g)
 
 SRC_DIR 		:=./src
