made mutexes struct

--- a/philo/libs/libft/Makefile
+++ b/philo/libs/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: safoh <safoh@student.codam.nl>             //   \ \ __| | | \ \/ /    #
 #                                                  (|     | )|_| |_| |>  <     #
 #    Created: 2022/02/09 17:06:29 by safoh        /'\_   _/`\__|\__,_/_/\_\    #
-#    Updated: 2022/08/24 21:33:01 by safoh        \___)=(___/                  #
+#    Updated: 2022/08/25 15:38:49 by safoh        \___)=(___/                  #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,8 +18,7 @@ NAME			=libft.a
 
 CC				:=gcc
 RM				:=rm -rf
-CFLAGS			=-Wall -Wextra -Werror$(if $(DEBUG), -g)\
-				 $(if $(MALLOC), -g)
+CFLAGS			=-Wall -Wextra -Werror$(if $(DEBUG), -g -fsanitize=thread)$(if $(MALLOC), -g)
 
 SRC_DIR 		:=./src
 BUILD_DIR		:=./build
