--- a/philo/libs/libft/Makefile
+++ b/philo/libs/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: safoh <safoh@student.codam.nl>             //   \ \ __| | | \ \/ /    #
 #                                                  (|     | )|_| |_| |>  <     #
 #    Created: 2022/02/09 17:06:29 by safoh        /'\_   _/`\__|\__,_/_/\_\    #
-#    Updated: 2022/09/05 14:44:53 by safoh        \___)=(___/                  #
+#    Updated: 2022/09/06 19:57:47 by safoh        \___)=(___/                  #
 #                                                                              #
 # **************************************************************************** #
 
@@ -54,7 +54,7 @@ debug:
 
 rebug: fclean
 	@$(MAKE) debug
-
+bonus: all
 fsan:
 	@$(MAKE) FSAN=1
 
