--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: safoh <safoh@student.codam.nl>             //   \ \ __| | | \ \/ /    #
 #                                                  (|     | )|_| |_| |>  <     #
 #    Created: 2022/07/07 17:49:38 by safoh        /'\_   _/`\__|\__,_/_/\_\    #
-#    Updated: 2022/09/08 17:59:06 by safoh        \___)=(___/                  #
+#    Updated: 2022/10/30 16:11:13 by safoh        \___)=(___/                  #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ include makerc/config.mk
 
 ################################################################################
 
-NAME			:=philo
+NAME			:=philo.out
 
 CC				:=gcc
 RM				:=rm -rfv
